[tool.poetry]
name = "init-mail"
version = "0.1.7"
description = "Added show_default=True for every options."
authors = ["vaibhavblayer <vaibhavblayer@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/vaibhavblayer/init-mail"
repository = "https://github.com/vaibhavblayer/init-mail"
keywords = ["cli", "email", "gmail", "mail"]
packages = [{include = "init_mail"}]


[tool.poetry.scripts]
init-mail = "init_mail.main:main"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
